[package]
name = "include-bytes-plus"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "Improved include_bytes! allowing to reinterpret input differently"
readme = "README.md"
repository = "https://github.com/DoumanAsh/include-bytes-plus"
documentation = "https://docs.rs/include-bytes-plus/"
license = "BSL-1.0"
keywords = ["file", "compile-time"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2021"

[lib]
proc-macro = true

[profile.dev]
opt-level = 3
